--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -98,7 +98,7 @@
 @media screen and (min-width: 768px) {
   .catalog {
     padding-bottom: 40px;
-    padding-bottom: 40px;
+    padding-top: 40px;
   }
 
   .catalog-title {
